<resources>
    <string name="app_name">PassAttack</string>
    <string name="measurement_accX">AccX: %s</string>
    <string name="measurement_accY">AccY: %s</string>
    <string name="measurement_accZ">AccZ: %s</string>
    <string name="measurement_gyroX">GyrX: %s</string>
    <string name="measurement_gyroY">GyrY: %s</string>
    <string name="measurement_gyroZ">GyrZ: %s</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="count_measurements">Count: %s</string>
    <string name="send_button">Send</string>
    <string name="start_send_message">Start sending record.</string>
    <string name="no_record_available">No measurements available to post.</string>
    <string name="send_success">Successfully uploaded password record.</string>
    <string name="send_fail">Failed to upload record.</string>
</resources>
