<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/measurementDataLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    app:cardCornerRadius="4dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPadding="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/currentTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/accXText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/currentTimeText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_accX" />

        <TextView
            android:id="@+id/accYText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accXText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_accY" />

        <TextView
            android:id="@+id/accZText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accYText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_accZ" />

        <TextView
            android:id="@+id/gyroXText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accZText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_gyroX" />

        <TextView
            android:id="@+id/gyroYText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gyroXText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_gyroY" />

        <TextView
            android:id="@+id/gyroZText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gyroYText"
            android:layout_marginStart="2dp"
            android:text="@string/measurement_gyroZ" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
