<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/startRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/stopRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startRecordButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/stop_button" />

    <Button
        android:id="@+id/sendRecordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopRecordButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/send_button"/>

    <include
        android:id="@+id/measurement_view"
        layout="@layout/measurement_data_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/userInputText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sendRecordButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
</RelativeLayout>